--- a/source/pages/index.njk
+++ b/source/pages/index.njk
@@ -22,8 +22,13 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="address=no">
 
-  {# Код, сгенерированный RealFaviconGenerator #}
-  {{ faviconsCode | manageRoot(host) }}
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#c42b16">
+  <meta name="msapplication-TileColor" content="#c42b16">
+  <meta name="theme-color" content="#ffffff">
 
   <style>
     {% filter prepareInlineCss() %}
